--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^6.0.0",
     "ksface": "^3.2.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
