--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@fortawesome/fontawesome-free": "^6.0.0",
+    "classnames": "^2.3.1",
     "ksface": "^3.2.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
