--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "25-5",
     "25 5"
   ],
-  "homepage": "https://kswebentwicklung.de",
+  "homepage": "https://focus.kswebentwicklung.de",
   "version": "1.0.0",
   "scripts": {
     "dev": "vite",
