--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "stay-focused",
-  "description": "Stay focused while working - with the Pomodoro method.",
+  "description": "Stay focused while working - with the pomodoro method.",
   "author": "Kevin Schmidt",
-  "private": true,
+  "private": false,
   "keywords": [
     "kevin schmidt",
     "pomodoro",
@@ -14,7 +14,7 @@
     "25 5"
   ],
   "homepage": "https://focus.kswebentwicklung.de",
-  "version": "1.0.0",
+  "version": "1.1.0",
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
